@@ -413,33 +413,39 @@ sub _cliCommand {
         my $artist = $request->getParam('artist');
 
         my $cnt = 0;
-        my ($current, $active, $inactive, $hide) = Slim::Plugin::Extensions::Plugin::getCurrentPlugins();
-        foreach my $plugin (@{$active}) {
-            if ($plugin->{name} eq 'MusicArtistInfo') {
-                if ($artist_id || $artist) {
-                    $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_MUSICARTISTINFO_BIOGRAPHY'));
-                    $request->addResultLoop("actions_loop", $cnt, "icon", "menu_book");
-                    if ($artist_id) {
-                        $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "biography", "html:1"], params=> [ "artist_id:" . $artist_id ] });
-                    } else {
-                        $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "biography", "html:1"], params=> [ "artist:" . $artist ] });
+
+        if (!$artist || !($artist eq cstring('', 'VARIOUSARTISTS'))) {
+            my ($current, $active, $inactive, $hide) = Slim::Plugin::Extensions::Plugin::getCurrentPlugins();
+            foreach my $plugin (@{$active}) {
+                if ($plugin->{name} eq 'MusicArtistInfo') {
+                    if ($artist_id || $artist) {
+                        $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_MUSICARTISTINFO_BIOGRAPHY'));
+                        $request->addResultLoop("actions_loop", $cnt, "icon", "menu_book");
+                        if ($artist_id) {
+                            $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "biography", "html:1", "artist_id:" . $artist_id], params => [] });
+                        } else {
+                            $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "biography", "html:1", "artist:" . $artist], params => [] });
+                        }
+                        $request->addResultLoop("actions_loop", $cnt, "weight", 0);
+                        $cnt++;
+                        $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_MUSICARTISTINFO_ARTISTPICTURES'));
+                        $request->addResultLoop("actions_loop", $cnt, "icon", "insert_photo");
+                        if ($artist_id) {
+                            $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "artistphotos", "artist_id:" . $artist_id], params => [] });
+                        } else {
+                            $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "artistphotos", "artist:" . $artist], params => [] });
+                        }
+                        $request->addResultLoop("actions_loop", $cnt, "weight", 1);
+                        $cnt++;
                     }
-                    $cnt++;
-                    $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_MUSICARTISTINFO_ARTISTPICTURES'));
-                    $request->addResultLoop("actions_loop", $cnt, "icon", "insert_photo");
-                    if ($artist_id) {
-                        $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "biography", "html:1"], params=> [ "artist_id:" . $artist_id ] });
-                    } else {
-                        $request->addResultLoop("actions_loop", $cnt, "do", { command => ["musicartistinfo", "artistphotos"], params=> [ "artist:" . $artist ] });
+                } elsif ($plugin->{name} eq 'YouTube') {
+                    if ($artist) {
+                        $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_YOUTUBE_ON_YOUTUBE'));
+                        $request->addResultLoop("actions_loop", $cnt, "svg", "youtube");
+                        $request->addResultLoop("actions_loop", $cnt, "do", { command => ["youtube","items"], params=> ["want_url:1", "item_id:3", "search:" . $artist, "menu:youtube"] });
+                        $request->addResultLoop("actions_loop", $cnt, "weight", 2);
+                        $cnt++;
                     }
-                    $cnt++;
-                }
-            } elsif ($plugin->{name} eq 'YouTube') {
-                if ($artist_id || $artist) {
-                    $request->addResultLoop("actions_loop", $cnt, "title", cstring('', 'PLUGIN_YOUTUBE_ON_YOUTUBE'));
-                    $request->addResultLoop("actions_loop", $cnt, "svg", "youtube");
-                    $request->addResultLoop("actions_loop", $cnt, "do", { command => ["youtube","items"], params=> [ "want_url:1","item_id:3","search:Iron Maiden","menu:youtube" ] });
-                    $cnt++;
                 }
             }
         }
